--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
     - "3.6"
 install: "pip install -r requirements.txt"
 before_script:
-  - python manage.py migrate
+  - python setup.py install
 script:
     - flake8
     - coverage run manage.py test
