:up: Add tests for geographic app
Add DS_STORE to gitignore

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,14 +2,18 @@
 include =
   pope/*
   users/*
+  geographic/*
 
 omit =
   *migrations*
+  *tests*
 
 [report]
 include =
   pope/*
   users/*
+  geographic/*
 
 omit =
   *migrations*
+  *tests*
